2008-01-19  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	Version 0.3.1 released.

	* configure.ac: Bump version to 0.3.1.

2008-01-19  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* build/gconf-schema-rules: Display an error when gconf-schema-extractor is
	  not found.

2007-08-04  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* build/gconf-schema-rules, configure.ac: Fix build errors related to
	  gconf stuff. Thanks to Scott Henson for the report.

2007-08-04  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	0.3 Released

	* NEWS: Removed obsolete info, redirect to ChangeLog.
	* TODO: One item done, one item added.

2007-08-04  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* alarm.mdp: Enable Makefile integration.

2007-08-04  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/AlarmPlugin.cs, src/Alarm.cs, src/AlarmConfigDialog.cs: Say no to
	  useless polling ! The alarm thread now sleeps until the time of the
	  alarm.

2007-05-29  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* alarm.mdp, alarm.mds: Update MonoDevelop files.

2007-05-29  Bertrand Lorentz <bertrand.lorentz@free.fr> 

	* src/ConfigurationWidget.cs, src/AlarmPlugin.cs,
	  src/SleepTimerConfigDialog.cs, src/AlarmConfigDialog.cs,
	  autogen.sh, po/LINGUAS, po/fr.po, po/POTFILES.in: Fix the i18n
	  support. Thanks to Alexandre Prokoudine for the suggestions.
	* build/m4, build/m4/shamrock, build/m4/shamrock/mono.m4,
	  build/m4/shamrock/programs.m4, build/m4/shamrock/i18n.m4: Add and
	  use abock's macros from banshee. configure.ac looks a little bit
	  better now.
	* configure.ac: Fix the i18n support. Thanks to Alexandre Prokoudine
	  for the suggestions.
	
	  Add and use abock's macros from banshee. configure.ac looks a
	  little bit better now.

2007-01-05  Bertrand Lorentz  <bertrand.lorentz@free.fr>
    * src/GConfSchemas.cs:
    * src/AlarmPlugin.cs: Updated to take advantage of the new configuration system.
    